# suckless

./: .gitignore  Makefile.am  README.md  configure.ac  meson.build
common/: draw.c  meson.build  sl-draw.h  sl-utils.h  utils.c
dmenu/: Makefile.am  README.md  arg.h  config.h  configure.ac  dmenu  dmenu.1  dmenu.c  dmenu.h  drw.c  drw.h  meson.build  stest.c
dmenu/apps/: dmenu.cpp
dmenu/patches/: dmenu-alpha-20210605-1a13d04.diff
dmenu/src/: dmenu.cpp  dmenu.hpp  draw.cpp  draw.hpp
dwm/: Makefile.am  README.md  config.def.h  config.h  configure.ac  drw.c  drw.h  dwm.c  dwm.h  meson.build
dwm-6.2/: config.def.h  dwm.c
dwm/include/: config.def.h  drw.h
dwm/patches/: dwm-attachaside-20180126-db22360.diff  shiftview.c
dwm/src/: drw.c  dwm.c  util.c
dwmblocks/: blocks.def.h  blocks.h  config.h  dwmblocks.c  dwmblocks.h  meson.build
slock/: README.md  config.h  meson.build  slock.c  slock.h  util.h
st/: Makefile.am  README.md  boxdraw.c  boxdraw_data.h  config.h  configure.ac  dynamic-array.c  dynamic-array.h  hb.c  hb.h  meson.build  normalMode.c  normalMode.h  st.c  st.h  win.h  x.c  x.h
st/include/: arg.h  config.def.h  st.h
st/patches/: st-columns-20210626-historyVanilla.diff  st-history-20210626-43a395a.diff  st-scrollback-20210626-historyVanilla.diff  st-vim-browse-20210626-historyVanilla.diff
st/src/: st.c  x.c
surf/: .gitignore  Makefile  Makefile.am  README.md  config.h  configure.ac  meson.build  surf.c
surf/include/: surf.h
surf/src/: arg.h  common.c  libsurf-webext.c  surf.c
